# rust_rv32i_echo

./: Cargo.toml  make.sh
.cargo/: config.toml
emulator/src/: main.cpp
src/: main.rs
